--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -868,6 +868,7 @@ en:
     details: Details
     developers: Developers
     digital:
+      assets: Digital Assets
       digital_delivery: Digital Delivery
     dimension_units:
       centimeter: Centimeter (cm)
