--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1212,6 +1212,7 @@ en:
     new_country: New Country
     new_customer: Create new account
     new_customer_return: New Customer Return
+    new_digital_asset: New digital asset
     new_domain: New domain
     new_image: New Image
     new_line_item: Add line item
