Digital assets management (#12507)
* DRAFT: Digital assets management

* Fix I18n

* Fix turbo frames id

* Remove no longer used params

* Spec

* Fix n+1

* Fix File.join

* Use translations for no resource found

* Fix i18n

* Do not override permitted_attributes

* Update admin/app/views/spree/admin/digitals/edit.html.erb

Co-authored-by: Damian Legawiec <damian@sparksolutions.co>

* Code review fixes

* Restore previous commit

* Remove index method from controller - it is not needed

* Use `:add_one` in the page actions as well

* Update only single row

* More n+1

* Translations

* Use `:digital_assets` translation everywhere

* Collection rendering

* Don't use turbo stream when not needed

---------

Co-authored-by: Damian Legawiec <damian@sparksolutions.co>

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -321,6 +321,9 @@ en:
       spree/customer_return:
         one: Customer Return
         other: Customer Returns
+      spree/digital:
+        one: Digital asset
+        other: Digital assets
       spree/inventory_unit:
         one: Inventory Unit
         other: Inventory Units
@@ -869,6 +872,7 @@ en:
     developers: Developers
     digital:
       digital_delivery: Digital Delivery
+    digital_assets: Digital assets
     dimension_units:
       centimeter: Centimeter (cm)
       foot: Foot (ft)
@@ -1208,6 +1212,7 @@ en:
     new_country: New Country
     new_customer: Create new account
     new_customer_return: New Customer Return
+    new_digital_asset: New digital asset
     new_domain: New domain
     new_image: New Image
     new_line_item: Add line item
