Added documentation on custom authentication

--- a/docs/developer/customization/v4/admin-panel.mdx
+++ b/docs/developer/customization/v4/admin-panel.mdx
@@ -1,4 +1,6 @@
-# Admin Panel
+<Warning>
+  This section is only relevant for Spree 4
+</Warning>
 
 Starting with Spree 4.7, we've introduced a new way of customizing the admin panel, that enables extensions to modify the admin panel UI without depending on the Deface gem. For Spree 4.6 and earlier, please see how to use [deface_overrides_tutorial.md](../advanced/deface_overrides_tutorial.md "mention") overrides.
 
