update to match the default credentials.

--- a/docs/developer/contributing/developing-spree.mdx
+++ b/docs/developer/contributing/developing-spree.mdx
@@ -104,8 +104,8 @@ To access the Admin Panel, you can go to [http://localhost:3000/admin](http://lo
 The default credentials for the Admin Panel are:
 
 ```
-Email: admin@example.com
-Password: password
+Email: spree@example.com
+Password: spree123
 ```
 
 ### Performance in development mode
