--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1344,23 +1344,28 @@ en:
     order_line_items: Order Line Items
     order_mailer:
       cancel_email:
-        dear_customer: Dear %{name},
+        dear_customer: Hey %{name},
         instructions: Your order has been CANCELED.  Please retain this cancellation information for your records.
         order_summary_canceled: Order %{number} Summary [CANCELED]
         subject: Cancellation of Order
-        thanks: Thank you for your business.
+        thanks: Thank you for
       confirm_email:
-        dear_customer: Dear %{name},
+        dear_customer: Hey %{name},
         instructions: Please review and retain the following order information for your records.
         order_summary: Order %{number} Summary
         subject: Order Confirmation
-        thanks: Thank you for your business.
+        thanks: Thank you
+      payment_link_email:
+        message: Please click the button below to pay for your order.
+        message_copy_link: 'If the button doesn''t work please copy and paste the following link to your browser:'
+        pay_for_order: Pay for order
+        subject: "Payment link for order #%{number}"
       store_owner_notification_email:
         heading: New Order Received
         instructions: You have received a new order.
         order_summary: Order %{number} Summary
         subject: "%{store_name} received a new order"
-        thanks: Thank you for your business.
+        thanks: Thank you
       store_team: "%{store_name} Team"
       subtotal: 'Subtotal:'
       total: 'Order Total:'
