Add missing translation

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -634,6 +634,7 @@ en:
     are_you_sure_delete: Are you sure you want to delete this record?
     associated_adjustment_closed: The associated adjustment is closed, and will not be recalculated. Do you want to open it?
     at_symbol: "@"
+    attachments: Attachments
     audit_log: Audit Log
     author: Author
     authorization_failure: Authorization Failure
