--- a/docs/developer/customization/extensions.mdx
+++ b/docs/developer/customization/extensions.mdx
@@ -1,5 +1,6 @@
 ---
-title: 3rd Party Extensions
+title: Extensions
+icon: "plug"
 description: >-
   Extensions provide additional features and integrations for your Spree
   application. Here's a list of the most popular ones.
@@ -24,6 +25,12 @@ description: >-
   </Accordion>
 
   <Accordion title="Internationalization">
+  <Card
+      title="Spree I18n"
+      href="https://github.com/spree-contrib/spree_i18n"
+    >
+      Spree I18n is a gem that provides a way to translate Spree Commerce applications into multiple languages. It allows you to translate the UI and have different translations for product descriptions, taxons, etc to improve conversions and customer satisfaction.
+    </Card>
     <Card
       title="Flow Commerce"
       href="https://github.com/mejuri-inc/flowcommerce_spree"
@@ -78,12 +85,6 @@ description: >-
 
   <Accordion title="Payments">
     <Card
-      title="Affirm"
-      href="https://github.com/Affirm/spree_affirm"
-    >
-      Affirm payment method.
-    </Card>
-    <Card
       title="Amazon Pay"
       href="https://github.com/ShopFelixGray/spree_pay_with_amazon"
     >
@@ -102,10 +103,10 @@ description: >-
       official Mollie payment gateway for Spree Commerce. Accept all major payment methods, including iDEAL, Bancontact, Visa, Mastercard, AmEx, and many more.
     </Card>
     <Card
-      title="Stripe Terminal"
-      href="https://github.com/ShopFelixGray/spree_stripe_terminal"
+      title="Stripe"
+      href="https://github.com/spree/spree_stripe"
     >
-      Allows you to process payments with the stripe terminal via the backend of spree.
+      Official Stripe payment gateway for Spree Commerce. Supports all major credit cards, Apple Pay, Google Pay, buy-now-pay-later (Affirm, Afterpay, Klarna), regional payment methods, and more.
     </Card>
   </Accordion>
 
