--- a/docs/developer/customization/promotions.mdx
+++ b/docs/developer/customization/promotions.mdx
@@ -1,3 +1,10 @@
+---
+title: Custom Promotions
+icon: "ticket"
+description: >-
+  In this guide we will show you how to create custom promotion rules and actions in Spree.
+---
+
 ## Overview
 
 In this guide we will show you how to create custom promotion rules and actions in Spree.
