--- a/docs/developer/customization/v4/deface.mdx
+++ b/docs/developer/customization/v4/deface.mdx
@@ -69,7 +69,7 @@ module Spree
 end
 ```
 
-Now, when we head to `http://localhost:3000/admin/products` and edit a product, we should be able to set a sale price for the product and be able to view it on our sale page, `http://localhost:3000/sale`. Note that you will likely need to restart our example Spree application created in the [Getting Started tutorial](../getting-started/installation).
+Now, when we head to `http://localhost:3000/admin/products` and edit a product, we should be able to set a sale price for the product and be able to view it on our sale page, `http://localhost:3000/sale`. Note that you will likely need to restart our example Spree application created in the [Getting Started tutorial](/developer/getting-started/quickstart).
 
 ### Available actions
 
