--- a/docs/developer/deployment/render.mdx
+++ b/docs/developer/deployment/render.mdx
@@ -1,6 +1,7 @@
 ---
 title: Render
 description: Deploy your Spree application to [Render.com](https://render.com) Platform as a Service platform
+icon: "server"
 ---
 
 ## Overview
@@ -36,7 +37,7 @@ Now clone the repository to your local machine.
 git clone https://github.com/your-username/my_spree_app.git
 ```
 
-Now you can start working on your application. Make sure your environment is set up correctly (follow the [Getting Started](/developer/getting_started) guide).
+Now you can start working on your application. Make sure your environment is set up correctly (follow the [Getting Started](/developer/getting-started/quickstart) guide).
 
 Running the `bin/setup` script should set your credentials correctly.
 
