--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -1,17 +1,14 @@
 ---
 title: "Quickstart"
 description: "Start building awesome eCommerce applications with Spree open-source eg. multi-store, multi-vendor, multi-tenant, multi-language, multi-currency. B2B or B2C."
+icon: "rocket"
 ---
 
 <img alt="Spree Commerce - Open Source e-commerce platform" classname="block dark:hidden" src="https://vendo-production-res.cloudinary.com/image/upload/w_1920/q_auto/v1733327023/docs/Spree_Commerce_open_source_eCommerce_platform_Ruby_on_Rails_API_headless_tsnvap.png" />
 
 ## Getting Started with Spree Commerce
 
-Welcome to the Spree Commerce [open-source eCommerce](https://github.com/spree/spree) documentation guide. Follow the instructions below to learn how to build and deploy your Spree Commerce store.
-
-<Info>
-  If you want to add Spree to your existing Rails application, you can skip this page and go to the [Adding to an existing Rails app](adding_spree_to_rails_app) section.
-</Info>
+Welcome to the Spree Commerce [open-source eCommerce](https://spreecommerce.org) documentation guide. Follow the instructions below to learn how to build and deploy your Spree Commerce store.
 
 ### 1. Installing Spree
 
