--- a/docs/developer/customization/authentication.mdx
+++ b/docs/developer/customization/authentication.mdx
@@ -2,6 +2,7 @@
 title: Authentication
 description: Learn how to use a custom authentication setup with Spree
 version: v5
+icon: user
 ---
 
 If you installed Spree following the [Quickstart guide](/developer/quickstart), you can completely this step - you are all set and integrated with the [Devise](https://github.com/plataformatec/devise) gem.
