--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -236,7 +236,7 @@ en:
         add_option:
           empty: Add options like size or color
           not_empty: Add another option
-        compare_at_price_description: This price is used to shown marked price on the product page.
+        compare_at_price_description: This price is used to show marked down price on the product page.
         stock_locations_link: To add more stock locations please go to <a href="%{link}">Stock Locations</a>
         total_inventory_html: 'Total inventory at %{stock_location} location: %{count} available'
       view_all_orders: View all orders
