Checkout with digital products (#12534)
* DRAFT: Checkout with digital products

* Automatically mark shipment as fulfilled after user downloads a digital product

* Allow admin to reset digital links limits

* Normalize translations

* Disable quick checkout for mixed orders

* Update docs

* Fix splitter spec

* Fix order spec

* Fix storefront specs

* Add missing translation

* Fix order's test suppport

* Digital links controller spec

* Fix digital delivery calculator spec

* Show attachments on the order complete screen

* Only the shipping category should decide whether a product is digital or not

* Don't change api route name

* Search digital links only from the current store

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -152,6 +152,10 @@ en:
         meta_description: Meta Description
         meta_keywords: Meta Keywords
         name: Site Name
+        preferred_digital_asset_authorized_clicks: Download clicks limit
+        preferred_digital_asset_authorized_days: Download days limit
+        preferred_limit_digital_download_count: Limit digital links download count
+        preferred_limit_digital_download_days: Limit digital links download days
         seo_robots: SEO Robots
         seo_title: SEO Title
         url: Site URL
@@ -630,6 +634,7 @@ en:
     are_you_sure_delete: Are you sure you want to delete this record?
     associated_adjustment_closed: The associated adjustment is closed, and will not be recalculated. Do you want to open it?
     at_symbol: "@"
+    attachments: Attachments
     audit_log: Audit Log
     author: Author
     authorization_failure: Authorization Failure
@@ -876,6 +881,7 @@ en:
     digital:
       digital_delivery: Digital Delivery
     digital_assets: Digital assets
+    digital_link_unauthorized: You are not authorized to access this asset
     dimension_units:
       centimeter: Centimeter (cm)
       foot: Foot (ft)
@@ -1359,7 +1365,7 @@ en:
         message: Please click the button below to pay for your order.
         message_copy_link: 'If the button doesn''t work please copy and paste the following link to your browser:'
         pay_for_order: Pay for order
-        subject: "Payment link for order #%{number}"
+        subject: 'Payment link for order #%{number}'
       store_owner_notification_email:
         heading: New Order Received
         instructions: You have received a new order.
