Add missing admin locale

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1222,6 +1222,7 @@ en:
     new_country: New Country
     new_customer: Create new account
     new_customer_return: New Customer Return
+    new_custom_domain: New Custom Domain
     new_digital_asset: New digital asset
     new_domain: New domain
     new_image: New Image
