--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
       amount_spent: Amount spent
       audit_log: Audit Log
       avg_order_value: Avg. Order Value
+      back_to_dashboard: Back to Dashboard
       bulk_ops:
         products:
           body:
