--- a/docs/developer/storefront/storefront.mdx
+++ b/docs/developer/storefront/storefront.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Storefront Overview"
+title: "Overview"
 ---
 
 Spree 5 ships with a new mobile-first storefront that is fully customizable & themeable.
@@ -8,27 +8,29 @@ Spree 5 ships with a new mobile-first storefront that is fully customizable & th
 
 New Storefront consists of:
 
-* Themes
-
+<CardGroup>
+  <Card title="Themes" href="/developer/storefront/themes">
     Themes are a collection of styles, scripts and templates that are used to style and layout the storefront.
-
-* Pages
-
+  </Card>
+  <Card title="Pages" href="/developer/storefront/pages">
     Pages are the main building blocks of the storefront. They are used to create the structure of the storefront. Each Theme comes with a set of default pages such as Home Page, Product Listing Page, Product Page, etc, but you can create your own custom landing pages as well.
-
-* Sections
-
+  </Card>
+  <Card title="Sections" href="/developer/storefront/sections-blocks">
     Sections are the building blocks of the pages. They are used to create the structure of the pages. Each Section is a collection of Blocks.
-
-* Blocks
-
+  </Card>
+  <Card title="Blocks" href="/developer/storefront/sections-blocks#blocks">
     Blocks are the smallest building blocks of the storefront. They are used to create the content of the pages.
+  </Card>
+  <Card title="Links" href="/developer/storefront/links">
+    Links are used to create the navigation of the storefront. They can be assigned to Sections and Blocks.
+  </Card>
+</CardGroup>
 
 ## Page Builder
 
 ![](https://vendo-production-res.cloudinary.com/image/upload/w_1920/q_auto/v1738166777/docs/Storefront/Theme%20Editor/7.1.1.1.2_Theme_Editor_-_Click_On_Default_Theme_qy0urp.png)
 
-The new storefront comes with a Page Builder that allows you to build pages using a drag-and-drop interface, as a part of Spree Admin Dashboard (provided via `spree_admin` gem). This allows you to create new pages and sections, modify existing ones, and add new blocks to the pages in a no-code way.
+The new storefront comes with a visual Page Builder that allows non-developers to build pages using a drag-and-drop interface, as a part of Spree Admin Dashboard (provided via `spree_admin` gem). This allows your team to create new pages and sections, modify existing ones, and add new blocks to the pages in a no-code way.
 
 You can learn more about the Page Builder in the [User Documentation](/user/storefront/theme-editor).
 
