--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -2094,6 +2094,7 @@ en:
     tracking_url: Tracking URL
     tracking_url_placeholder: e.g. http://quickship.com/package?num=:tracking
     transaction_id: Transaction ID
+    transaction_id_help: This is the ID of the transaction that was created in the 3rd party payment gateway.
     transfer_from_location: Transfer From
     transfer_stock: Transfer Stock
     transfer_to_location: Transfer To
